--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -187,6 +187,7 @@
     </Compile>
     <Compile Include="Models\Auth\PermissionModel.cs" />
     <Compile Include="Models\Manage\AdminGroupModel.cs" />
+    <Compile Include="Models\Manage\AdminModel.cs" />
     <Compile Include="Models\Manage\MenuModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Manage\MyMenuChoiceQuery.cs" />
@@ -403,6 +404,9 @@
     <Content Include="Views\Menu\Modify.cshtml" />
     <Content Include="Views\AdminGroup\List.cshtml" />
     <Content Include="Views\AdminGroup\Add.cshtml" />
+    <Content Include="Views\AdminGroup\Modify.cshtml" />
+    <Content Include="Views\Shared\_LayoutPopup.cshtml" />
+    <Content Include="Views\AdminGroup\GroupInAdminList.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
