--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -177,12 +177,14 @@
     <Compile Include="Common\SetInfo.cs" />
     <Compile Include="Common\SHA.cs" />
     <Compile Include="Common\ValidationFilter.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AdminGroupController.cs" />
     <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\SharedController.cs" />
+    <Compile Include="Controllers\TermsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -191,18 +193,26 @@
     <Compile Include="Models\Manage\AdminModel.cs" />
     <Compile Include="Models\Manage\MenuModel.cs" />
     <Compile Include="Models\Manage\MyMenuChoiceModel.cs" />
+    <Compile Include="Models\Manage\TermsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Manage\MyMenuChoiceQuery.cs" />
     <Compile Include="Query\Manage\AdminGroupQuery.cs" />
     <Compile Include="Query\Manage\AdminQuery.cs" />
     <Compile Include="Query\Manage\MenuQuery.cs" />
+    <Compile Include="Query\Manage\TermsQuery.cs" />
+    <Compile Include="Request\LoginRequest.cs" />
+    <Compile Include="Request\Manage\AdminRequest.cs" />
     <Compile Include="Request\Manage\AdminGroupRequest.cs" />
     <Compile Include="Request\Manage\MenuRequest.cs" />
     <Compile Include="Request\Manage\MyMenuChocieRequest.cs" />
+    <Compile Include="Request\Manage\TermsRequest.cs" />
+    <Compile Include="Request\Pagination.cs" />
+    <Compile Include="Request\Search.cs" />
     <Compile Include="Service\Manage\AdminGroupService.cs" />
     <Compile Include="Service\Manage\AdminService.cs" />
     <Compile Include="Service\Manage\MenuService.cs" />
     <Compile Include="Service\Manage\MyMenuChoiceService.cs" />
+    <Compile Include="Service\Manage\TermsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\error.css" />
@@ -410,6 +420,15 @@
     <Content Include="Views\Shared\_LayoutPopup.cshtml" />
     <Content Include="Views\AdminGroup\GroupInAdminList.cshtml" />
     <Content Include="Views\Common\MyMenuList.cshtml" />
+    <Content Include="Views\Admin\List.cshtml" />
+    <Content Include="Views\Admin\Add.cshtml" />
+    <Content Include="Views\Admin\Info.cshtml" />
+    <Content Include="Views\Admin\AdminPwdModify.cshtml" />
+    <Content Include="Views\Admin\AdminLoginList.cshtml" />
+    <Content Include="Views\Admin\AdminMenuAuthList.cshtml" />
+    <Content Include="Views\Admin\MenuAuthGroupList.cshtml" />
+    <Content Include="Views\Admin\MenuAuthAdminList.cshtml" />
+    <Content Include="Views\Terms\List.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
