--- a/Manager/Web.config
+++ b/Manager/Web.config
@@ -12,7 +12,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" maxRequestLength="100004096" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="100004096" requestValidationMode="2.0" />
     <httpCookies httpOnlyCookies="true" />
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="ko-KR" uiCulture="ko-KR"/>
   </system.web>
