--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -180,11 +180,13 @@
     <Compile Include="Common\ValidationFilter.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AdminGroupController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\SharedController.cs" />
+    <Compile Include="Controllers\ShopInfoController.cs" />
     <Compile Include="Controllers\TermsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -194,26 +196,34 @@
     <Compile Include="Models\Manage\AdminModel.cs" />
     <Compile Include="Models\Manage\MenuModel.cs" />
     <Compile Include="Models\Manage\MyMenuChoiceModel.cs" />
+    <Compile Include="Models\Manage\ShopInfoModel.cs" />
     <Compile Include="Models\Manage\TermsModel.cs" />
+    <Compile Include="Models\Product\CategoryModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Manage\MyMenuChoiceQuery.cs" />
     <Compile Include="Query\Manage\AdminGroupQuery.cs" />
     <Compile Include="Query\Manage\AdminQuery.cs" />
     <Compile Include="Query\Manage\MenuQuery.cs" />
+    <Compile Include="Query\Manage\ShopInfoQuery.cs" />
     <Compile Include="Query\Manage\TermsQuery.cs" />
+    <Compile Include="Query\Product\CategoryQuery.cs" />
     <Compile Include="Request\LoginRequest.cs" />
     <Compile Include="Request\Manage\AdminRequest.cs" />
     <Compile Include="Request\Manage\AdminGroupRequest.cs" />
     <Compile Include="Request\Manage\MenuRequest.cs" />
     <Compile Include="Request\Manage\MyMenuChocieRequest.cs" />
+    <Compile Include="Request\Manage\ShopInfoRequest.cs" />
     <Compile Include="Request\Manage\TermsRequest.cs" />
     <Compile Include="Request\Pagination.cs" />
+    <Compile Include="Request\Product\CategoryRequest.cs" />
     <Compile Include="Request\Search.cs" />
     <Compile Include="Service\Manage\AdminGroupService.cs" />
     <Compile Include="Service\Manage\AdminService.cs" />
     <Compile Include="Service\Manage\MenuService.cs" />
     <Compile Include="Service\Manage\MyMenuChoiceService.cs" />
+    <Compile Include="Service\Manage\ShopInfoService.cs" />
     <Compile Include="Service\Manage\TermsService.cs" />
+    <Compile Include="Service\Product\CategoryService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\error.css" />
@@ -434,6 +444,14 @@
     <Content Include="Views\Common\editorFileUpload.cshtml" />
     <Content Include="Views\Terms\Modify.cshtml" />
     <Content Include="Views\Shared\messageRedirect.cshtml" />
+    <Content Include="Views\ShopInfo\Info.cshtml" />
+    <Content Include="Views\Admin\MyInfo.cshtml" />
+    <Content Include="Views\Admin\myPasswordModify.cshtml" />
+    <Content Include="Views\Category\List.cshtml" />
+    <Content Include="Views\Category\List1.cshtml" />
+    <Content Include="Views\Category\List2.cshtml" />
+    <Content Include="Views\Category\Add.cshtml" />
+    <Content Include="Views\Category\Modify.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
